fix: allow section title wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,10 @@ span.pipe-separator {
     align-items: baseline;
 }
 
+.info-section-heading-container h2 {
+    min-width: fit-content;
+}
+
 .info-section-heading-separator {
     display: inline-block;
     height: 1rem;
